// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordField applies theme and style props 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      [
        {},
        {
          "backgroundColor": "red",
        },
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "color": "hsl(210, 25%, 25%)",
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={true}
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="passwordInput"
    />
    <View
      accessibilityLabel="Show password"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {},
          undefined,
          undefined,
        ]
      }
    >
      <Image
        accessibilityRole="image"
        accessible={true}
        source={
          {
            "uri": "visibilityOff",
          }
        }
        style={
          [
            {
              "height": 16,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 16,
            },
            [
              {
                "tintColor": "hsl(210, 10%, 40%)",
              },
              {
                "backgroundColor": "blue",
              },
            ],
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`PasswordField renders as expected 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      [
        {},
        undefined,
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "color": "hsl(210, 25%, 25%)",
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={true}
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="passwordInput"
    />
    <View
      accessibilityLabel="Show password"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {},
          undefined,
          undefined,
        ]
      }
    >
      <Image
        accessibilityRole="image"
        accessible={true}
        source={
          {
            "uri": "visibilityOff",
          }
        }
        style={
          [
            {
              "height": 16,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 16,
            },
            [
              {
                "tintColor": "hsl(210, 10%, 40%)",
              },
              undefined,
            ],
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`PasswordField renders as expected when disabled 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      [
        {},
        undefined,
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "color": "hsl(210, 25%, 25%)",
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "opacity": 0.6,
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": true,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={false}
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={true}
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="passwordInput"
    />
    <View
      accessibilityLabel="Show password"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "opacity": 0.6,
          },
          undefined,
          undefined,
        ]
      }
    >
      <Image
        accessibilityRole="image"
        accessible={true}
        source={
          {
            "uri": "visibilityOff",
          }
        }
        style={
          [
            {
              "height": 16,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 16,
            },
            [
              {
                "tintColor": "hsl(210, 10%, 40%)",
              },
              undefined,
            ],
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`PasswordField should be able to hide show password icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      [
        {},
        undefined,
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "color": "hsl(210, 25%, 25%)",
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={true}
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="passwordInput"
    />
  </View>
</View>
`;

exports[`PasswordField should be able to obscure text programmatically 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      [
        {},
        undefined,
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "color": "hsl(210, 25%, 25%)",
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={false}
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="passwordInput"
    />
    <View
      accessibilityLabel="Hide password"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {},
          undefined,
          undefined,
        ]
      }
    >
      <Image
        accessibilityRole="image"
        accessible={true}
        source={
          {
            "uri": "visibilityOn",
          }
        }
        style={
          [
            {
              "height": 16,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 16,
            },
            [
              {
                "tintColor": "hsl(210, 10%, 40%)",
              },
              undefined,
            ],
          ]
        }
      />
    </View>
  </View>
</View>
`;
